--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300|Roboto+Condensed:700|Lobster">
     <link type="text/css" rel="stylesheet" href="./style/index.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
+    <script src="./script/sketch.js"></script>
+    <script src="./script/turtle.js"></script>
+    <script src="./script/player.js"></script>
   </head>
   <body>
-    <h1>Under construction...</h1>
+    <h1 class="title">
+      Tortuga Artificial
+    </h1>
+    <div id="app-holder"></div>
   </body>
 </html>
