--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300|Roboto+Condensed:700|Lobster">
     <link type="text/css" rel="stylesheet" href="./style/index.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/p5.js/1.0.0/p5.min.js"></script>
+    <script src="./script/arrowScrollDisable.js"></script>
     <script src="./script/sketch.js"></script>
     <script src="./script/turtle.js"></script>
     <script src="./script/player.js"></script>
