Added a debug toggle in page.

--- a/index.html
+++ b/index.html
@@ -9,11 +9,16 @@
     <script src="./script/sketch.js"></script>
     <script src="./script/turtle.js"></script>
     <script src="./script/player.js"></script>
+    <script src="script/toggleDebug.js"></script>
   </head>
   <body>
     <h1 class="title">
       Tortuga Artificial
     </h1>
+    <div>
+      <p>Para observar los radios de confianza de las tortugas y sus vectores con relación al robot:</p>
+      <button id="debug-button">Haz click aquí!</button>
+    </div>
     <div id="app-holder"></div>
   </body>
 </html>
